Login, Registration & menu setup from config is done.

--- a/resources/scss/adminlte.scss
+++ b/resources/scss/adminlte.scss
@@ -1,7 +1,7 @@
 @import 'admin-lte/dist/css/adminlte.css';
 @import 'admin-lte/plugins/icheck-bootstrap/icheck-bootstrap.css';
 @import 'variables';
-@import './bl';
+//@import './bl';
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
